# hand-recognization

./: CMakeLists.txt  HotKey.cpp  HotKey.h  MoveHandle.cpp  MoveHandle.h  main.cpp
